--- a/bicemodded/localisation/english/abilities_l_english.yml
+++ b/bicemodded/localisation/english/abilities_l_english.yml
@@ -13,6 +13,7 @@
  ABILITY_TOOLTIP_DURATION:0 "Duration: $VALUE|H$"
  ABILITY_TOOLTIP_COOLDOWN:0 "Cooldown: $VALUE|H$"
  ABILITY_TOOLTIP_ALREADY_ACTIVE_GROUP:0 "§RThis Ability is already active at the Army Group level.§!"
+ ABILITY_TOOLTIP_ALREADY_ACTIVE_SOME_CHILD_GROUPS:0 "§RThis Ability is already active for:\n$LEADERS$§!"
  ABILITY_TOOLTIP_ALREADY_ACTIVE_CHILD_GROUPS:0 "§RThis Ability is already active for all child groups.§!"
  ALLOCATED_CP_ENTRY:0 "$NAME$ ($DURATION$)"
  ABILITY_DUR_HOURS:0 "$num|H$ hours"
