--- a/bicemodded/localisation/english/air_l_english.yml
+++ b/bicemodded/localisation/english/air_l_english.yml
@@ -37,7 +37,9 @@
  AIRWING_MISSION_TYPE_DROP_NUKE_DESC:0 "Nuclear strike"
  AIRWING_MISSION_TYPE_DROP_NUKE_DISABLED_DESC:0 "§RNot Enough§! nukes to make strike!"
  AIRWING_MISSION_TYPE_RECON:0 "Air Recon"
- AIRWING_MISSION_TYPE_RECON_DESC:0 "Perform aerial scouting and intel gathering."
+ AIRWING_MISSION_TYPE_RECON_DESC:1 "Perform aerial scouting and intel gathering.\n\nNon-scout planes can only execute this mission on enemy controlled states."
+ AIRWING_MISSION_TYPE_NAVAL_PATROL:0 "Naval Patrol"
+ AIRWING_MISSION_TYPE_NAVAL_PATROL_DESC:1 "Patrol the sea, without engaging enemy ships, and help friendly task forces patrolling in the area spot enemies."
  AIRWING_MISSION_TYPE_FIGHTER_SUPPORT_MISSIONS:0 "Fighter and Support Missions"
  AIRWING_MISSION_TYPE_NAVAL_MISSIONS:0 "Naval Missions"
  AIRWING_MISSION_TYPE_BOMBING_MISSIONS:0 "Bombing Missions"
@@ -61,6 +63,7 @@
  AIRWING_TRANSFERRING:0 "Transferring to $BASE|H$ ($PERC|%H$, expected arrival: $ETA|%H$)"
  AIRWING_RETURN_TO_BASE:0 "Returning to base ($PERC|%H$, expected arrival: $ETA|%H$)"
  AIRWING_MERGE:0 "Merge Air Wings"
+ AIRWING_MERGE_GROUPS:0 "Merge Air Groups"
  AIRBASE_AIRPLANES_KNOWN:2 "Capacity: $VALUE|H$/$CAPACITY|H$ airplanes"
  AIRBASE_CAPACITY_LIMITED_BY_DAMAGE:0 "§RCapacity limited by damage!§!"
  AIRBASE_AIRPLANES_ESTIMATED:1 "§HAir Base§! in $BASE|H$: around $VALUE|H$ airplanes"
@@ -71,7 +74,8 @@
  AIRWING_REORG:0 "Reorganize Air Wings"
  AIRWING_REORG_ONE:0 "Reorganize Air Wing"
  AIRWING_REORG_BASE:1 "Reorganize Air Wings"
- AIRWING_MERGE_BLOCKED:2 "§RTo merge, select two or more Air Wings of the same type from the same airbase, that are not exile wings or from the same exile government, are not in transfer and have at most $MAX|H$ planes in them.§!"
+ AIRWING_MERGE_BLOCKED:3 "§RTo merge, select two or more Air Wings of the same type from the same airbase, that are not exile wings or from the same government in exile and are not in transfer.§!"
+ AIRWING_MERGE_GROUPS_BLOCKED:0 "§RYou need to select two or more Air Groups in order to merge them.§!"
  AIRWING_REORG_BLOCKED:2 "§RSelect one or two Air Wings of the same type from the same airbase, that are not exile wings or from the same exile government and are not in transfer.§!"
  AIRWING_SPLIT_BLOCKED:0 "§RSelect one Air Wing that is not in transfer and has at least §H2§! planes.§!"
  AIRWING_REORG_ONE_BASE:1 "Reorganize Air Wing"
@@ -256,6 +260,8 @@
  SELECT_HALF_WINGS:0 "§TSelect half of the current air wings§!"
  SELECT_HALF_WINGS_BLOCKED:0 "§RNeed to have at least §H2§! Air Wings selected§!"
  HOLD_WINGS:0 "§THold Air Wings.§!"
+ CREATE_AIR_GROUP:0 "Create Air Group"
+ REMOVE_FROM_AIR_GROUP:0 "Remove selection from Air Group"
  AIR_BASE_ITEM_TOGGLE_SELECTION:0 "§GShift+click§! to toggle selection."
  AIR_BASE_CARRIER_SEPARATOR_SELECT:0 "§GClick to add Air Wings stationed here to selection.§!"
  AIR_BASE_CARRIER_SEPARATOR_DESELECT:0 "§GClick to remove Air Wings stationed here from selection.§!"
@@ -305,11 +311,13 @@
  AIRWING_ATTACHED:0 "§HAttached Airwings:§!"
  AIRWING_DISBAND:0 "Disband Air Wings"
  ATTACH_AIR_WING_DESC:0 "§GClick§! to attach selected air wings to the army"
+ CANNOT_ATTACH_AIR_WING_DESC:0 "§RSelected wings cannot attach to an army§!"
  ATTACH_AIR_WING_SELECT_DESC:1 "§GRight-click§! to detach assigned air wings"
  ATTACH_AIR_WING_SELECT_SOME:0 "§RSelect air wings to attach to the army§!"
  SELECT_ATTACHED_AIRWINGS:0 "§GClick§! to select air wings attached to the army"
  WING_COUNTS:0 "$VALUE|*0$"
  AIRWING_NEED_ONE_SELECTED:0 "§RNeed to have at least §H1§! Air Wing selected§!"
+ AIRWING_NEED_ONE_GROUPED_SELECTED:0 "§RNeed to have at least §H1§! Grouped Air Wing selected§!"
  AIR_REINFORCEMENT_LOW_PRIORITY:0 "Low replacement priority"
  ATTACHED_AIR_WING_DESC:0 "§HAttached Air Wing§!"
  ATTACHED_AIR_WING_DELAYED_DESC:1 "§GLeft-click§! to select attached army\n§GRight-click§! to detach"
@@ -326,11 +334,16 @@
  AIR_VIEW_DAMAGE_FROM_PLANES_BY_US:0 "§HEnemy Planes Shot Down§!"
  AIR_VIEW_DAMAGE_FROM_PLANES_BY_ENEMY:0 "§HFriendly Planes Lost§!"
  AIR_VIEW_DAMAGE_FROM_AA_BY_US:0 "§HEnemy Planes Downed by Anti-Air§!"
+ AIR_VIEW_INTERCEPTED_EN_ROUTE_BY_US_COUNT:0 "§HEnemy Planes Shot Down En Route to Target:§! $COUNT$"
+ AIR_VIEW_INTERCEPTED_EN_ROUTE_BY_ENEMY:0 "§RFriendly Planes Shot Down En Route to Target!§!"
+ AIR_VIEW_INTERCEPTED_EN_ROUTE_BY_ENEMY_COUNT:0 "§HFriendly Planes Shot Down En Route to Target:§! $COUNT$"
  AIR_VIEW_DAMAGE_FROM_AA_BY_ENEMY:0 "§HPlanes Lost to Anti-Air§!"
  AIR_VIEW_DAMAGE_TO_LOGISTICS_BY_US:0 "§HEnemy Logistics Bombed§!"
  AIR_VIEW_DAMAGE_TO_LOGISTICS_BY_ENEMY:0 "§HFriendly Logistics Bombed§!"
  AIR_VIEW_DAMAGE_TO_RAILWAY_GUNS_BY_US:0 "§HEnemy Railway Guns Bombed§!"
  AIR_VIEW_DAMAGE_TO_RAILWAY_GUNS_BY_ENEMY:0 "§HFriendly Railway Guns Bombed§!"
+ AIR_VIEW_DAMAGE_FROM_TRAINS_BY_US:0 "§HEnemy Planes Downed by Armored Trains§!"
+ AIR_VIEW_DAMAGE_FROM_TRAINS_BY_ENEMY:0 "§HPlanes Lost to Enemy Armored Trains§!"
  AIR_VIEW_SHOW_OUR_MISSIONS:0 "§HOur Missions§!\nShow results from missions flown by our Air Wings."
  AIR_VIEW_SHOW_ENEMY_MISSIONS:0 "§HEnemy Missions§!\nShow results from missions flown by enemy Air Wings."
  AIR_VIEW_SHOW_LAST_SORTIE:0 "§HLast Sortie§!\nShow results from the last Sortie."
@@ -358,8 +371,8 @@
  AIR_VIEW_DETECTION_HEADER_ENEMY:0 "§HEnemy Air Detection§!"
  AIR_VIEW_DETECTION_DESC:0 "The higher the §YAir Detection§! is in an area the easier it is to locate and engage enemy planes. This affects the amount of active planes that enter combat."
  AIR_VIEW_AIRPLANES_IN_COMBAT_FIGHTERS:0 "Amount of planes engaged in combat during last period.\nThe amount of active planes in the region that engage in combat is affected by §HAir Detection§!."
- AIR_VIEW_AIRPLANES_IN_COMBAT:0 "Amount of planes carrying out §HGround Missions§! during last period."
- AIR_VOLUNTEERS_LIMIT:0 "Air volunteers plane limit"
+ AIR_VIEW_AIRPLANES_IN_COMBAT:1 "Amount of planes carrying out §HGround Missions§! during last period.\n\nA number in (§Hbrackets§!) indicates planes passing through this region in order to carry out missions further afield."
+ AIR_VOLUNTEERS_LIMIT:1 "Air volunteers wing limit"
  AIR_STRATEGIC_PRIORITIES:0 "Strategic bombing priorities"
  VOLUNTEER_AIR_WING_DESC:0 "This is a volunteer air wing sent to $TAG|H$ and uses $COUNT|H$/$CAP|H$ air volunteer capacity"
  AIR_SUPPLY_VERY_LOW_SUPPLY:0 "§RWe require $NEED|H1$ more supply in the strategic region!§!"
@@ -371,11 +384,35 @@
  AIR_MORE_GROUND_CREWS_NOT_ENOUGH:0 "§RNot enough Command Power.§!"
  ADD_MINES_EFFECT:0 "Add $NUM|H$ mines to $REGION|H$"
  REMOVE_MINES_EFFECT:0 "Clear $NUM|H$ mines from $REGION|H$"
- AIR_REINFORCE_OBSOLETE_ONLY:0 "§HReserve air wing§!\nAllow only obsolete planes to reinforce §HAir wing§!."
- AIR_REINFORCE_ANY:0 "§HRegular air wing§!\n Use current and obsolete designs to reinforce §HAir wing§!."
+ AIR_REINFORCE_OBSOLETE_ONLY:1 "§HReserve air wing§!\nAllow only outdated planes to reinforce §HAir wing§!."
+ AIR_REINFORCE_ANY:1 "§HRegular air wing§!\n Use current and outdated designs to reinforce §HAir wing§!."
  AIR_REINFORCE_ONLY_NEW:0 "§HElite air wing§!\nAllow only current plane designs to reinforce §HAir wing§!."
  AIR_REINFORCE_ONLY_SAME:0 "§HSpecialized air wing§!\nOnly planes models already in the §HAir wing§! are allowed to reinforce."
  AIR_REINFORCE_DESC:0 "To change reinforcement rule §HReorganize§! the Air wing."
  DUPLICATE_SELECTED_WINGS:0 "Duplicate selected Air wings for all where this is possible."
  DUPLICATE_WINGS_BLOCK:0 "§RTo duplicate Air wings, you must select at least one where there are some planes in the Stockpile matching those in your wings.§!"
  AIRWING_SET_REINF_LIMIT_WARNING_DISBAND:0 "§RThis wing will be disbanded and all its airplanes returned to reserves.§!"
+ adjuster_mission_air_superiority:0 "$AIRWING_MISSION_TYPE_AIR_SUPERIORITY$"
+ adjuster_mission_attack_logistics:0 "$AIRWING_MISSION_TYPE_ATTACK_LOGISTICS$"
+ adjuster_mission_cas:0 "$AIRWING_MISSION_TYPE_CAS$"
+ adjuster_mission_interception:0 "$AIRWING_MISSION_TYPE_INTERCEPTION$"
+ adjuster_mission_naval_bomber:0 "$AIRWING_MISSION_TYPE_NAVAL_BOMBER$"
+ adjuster_mission_naval_kamikaze:0 "$AIRWING_MISSION_TYPE_NAVAL_KAMIKAZE$"
+ adjuster_mission_naval_mines_planting:1 "$AIRWING_MISSION_TYPE_NAVAL_MINE_PLANTING$"
+ adjuster_mission_naval_mines_sweeping:1 "$AIRWING_MISSION_TYPE_NAVAL_MINE_SWEEPING$"
+ adjuster_mission_naval_patrol:0 "$AIRWING_MISSION_TYPE_NAVAL_PATROL$"
+ adjuster_mission_port_strike:0 "$AIRWING_MISSION_TYPE_PORT_STRIKE$"
+ adjuster_mission_recon:0 "$AIRWING_MISSION_TYPE_RECON$"
+ adjuster_mission_strategic_bomber:0 "$AIRWING_MISSION_TYPE_STRATEGIC_BOMBER$"
+ CREATE_AIRWING_VIEW_FILTER_DESC:0 "Show only $ARCHTYPE|H$ ($COUNT|H$ match)"
+ QUICK_DEPLOY_WING_ENABLE_DESC:0 "Add $PLANE_TYPE|H$ air wing.\nYou have $COUNT|H$ $PLANE_TYPE$ planes in your stockpile.\n\n§GClick§! to add §H1§!\n§GCtrl+click§! to add §H5§!\n§GShift+click§! to add §H10§!"
+ QUICK_DEPLOY_WING_DISABLE_NO_EQUIP_DESC:0 "Add $PLANE_TYPE|H$ air wing.\nYou have zero $PLANE_TYPE$ plane in your stockpile.\n\nProduce more $PLANE_TYPE|H$ planes in order to deploy more."
+ QUICK_DEPLOY_WING_DISABLE_NO_MAN_DESC:0 "Add $PLANE_TYPE|H$ air wing.\nYou don't have enough manpower."
+ QUICK_DEPLOY_SELECTED_CHECKBOX_DESC:0 "§GClick§! to remove §Hquick-deploy§! button."
+ QUICK_DEPLOY_DESELECTED_AND_SELECTABLE_CHECKBOX_DESC:0 "§GClick§! to add §Hquick-deploy§! button."
+ QUICK_DEPLOY_DESELECTED_AND_NOT_SELECTABLE_CHECKBOX_DESC:0 "You have assigned your maximum amount of §Hquick-deploy§! buttons. Remove one in order to add a new one."
+ QUICK_DEPLOY_SELECTION_WINDOW_DESC:0 "§GClick§! to add plane types for quick-deploy."
+ QUICK_DEPLOY_SELECTION_WINDOW_OPEN_DESC:1 "Quick-deploy\n\nAdd short-cuts for deploying §Hair wings§! of a specific type."
+ NOT_ENOUGH_PLANES_FOR_MISION:0 "§RYour air wing needs at least $NUM$ planes to enable this mission§!."
+ SETUP_AIR_WING_MOVE_INFO:0 "§GClick§! to transfer up to §H100§! planes of this type."
+ OPEN_DESIGNER_VIEW_NOT_FOREIGN:0 "§GClick§! to open this variant in the equipment designer. Foreign variants cannot be edited."
