--- a/bicemodded/localisation/english/autonomy_l_english.yml
+++ b/bicemodded/localisation/english/autonomy_l_english.yml
@@ -68,4 +68,6 @@
  CONSTRUCTION_MASTER_BUILDING_CANT_REDUCE:0 "§RWe are not allowed to reduce the level or cancel this construction.§!"
  CONSTRUCTION_INFO_MASTER:0 "This construction is built on the $WHO|H$ territory. If we don't use all factories, they can contribute using theirs."
  CONSTRUCTION_INFO_SUBJECT:0 "This construction is built for us by the $WHO|H$. If they don't use all factories, we can contribute using ours."
+ autonomy_communist_satellite:0 "Satellite"
+ autonomy_occupation_zone:0 "Occupation Zone"
  
