--- a/bicemodded/localisation/english/bftb_decisions_l_english.yml
+++ b/bicemodded/localisation/english/bftb_decisions_l_english.yml
@@ -398,7 +398,7 @@
  TUR_etatism_crisis_3_desc:0 "Trying to simutaneously maintain our Etatist economy model while also adopting a war economy is proving to be problematic."
  TUR_etatism_crisis_4:0 "Imminent Depression"
  TUR_etatism_crisis_4_desc:0 "Trying to simutaneously maintain our Etatist economy model while also adopting a war economy is proving to be problematic. If we fail to take some real action on this issue, then we could well destroy our entire economy."
- ott_reform_the_eyalet_of_rumelia:0 "Reform the Eyalet of Ruemlia"
+ ott_reform_the_eyalet_of_rumelia:1 "Reform the Eyalet of Rumelia"
  ott_merge_the_eyalets_of_morea_crete_and_kibris:0 "Merge the Eyalets of Morea, Crete, and Kibris"
  ott_enlarge_the_vilayet_of_bosnia:0 "Enlarge the Vilayet of Bosnia"
  ott_restore_the_vilayet_of_the_danube_and_moldova:0 "Restore the Vilayet of the Danube and Moldova"
@@ -418,13 +418,14 @@
  exploit_the_raman_oil_field:0 "Exploit the Raman Oil Field"
  drill_in_the_garzan_oil_field:0 "Drill in the Garzan Oil Field"
  expand_the_west_raman_oil_field:0 "Expand the West Raman Oil Field"
- form_rumelia_greece_required_states_tt:0 "Controls all §YGreek§! states north of §Y[186.GetName]§!."
+ form_rumelia_greece_required_states_tt:1 "Controls all §YGreek§! mainland states."
  form_rumelia_bulgaria_required_states_tt:0 "Controls all §YBulgarian§! states."
  form_rumelia_yugoslavia_required_states_tt:0 "Controls all §YSerbian§!, §YMacedonian§!, and §YMontenegrin§! states."
  form_rumelia_albania_required_states_tt:0 "Controls all §YAlbanian§! states."
- form_rumelia_greece_coring_states_tt:0 "Cores all §YGreek§! states north of §Y[186.GetName]§!."
+ form_rumelia_greece_coring_states_tt:1 "Cores all §YGreek§! mainland states."
  form_rumelia_bulgaria_coring_states_tt:0 "Cores all §YBulgarian§! states."
  form_rumelia_yugoslavia_coring_states_tt:0 "Cores all §YSerbian§!, §YMacedonian§!, and §YMontenegrin§! states."
+ form_rumelia_albania_coring_states_tt:0 "Cores all §YAlbanian§! states."
 
  TUR_the_fading_father_category:0 "The Fading Father"
  TUR_the_fading_father_category_desc:0 "The Father of the Turks, Mustafa Kemal Atatürk, is taking ill more and more frequently. We must confront the unfortunate reality that the messianic founding father of our nation may not live to see [ROOT.GetNameDef] endure through to the end of the current crisis that faces the world. \n\nAtatürk's current health situation is: [ROOT.GetAtaturkHealthBar].\n"
