--- a/bicemodded/localisation/english/combat_l_english.yml
+++ b/bicemodded/localisation/english/combat_l_english.yml
@@ -17,7 +17,12 @@
  COMBAT_DIVISION_DEFENDER:0 "$NAME|H$ (§YDefender§!)\n\n"
  TACTICS_COMBAT_DESC:0 "Damage and speed modifiers from Tactics:"
  HARDNESS_COMBAT_DESC:0 "Hardness: $HARDNESS|Y0%$\nSuffers $SOFTNESS|Y0%$ of all Soft attacks.\nSuffers $HARDNESS|Y0%$ of all Hard attacks."
- PIERCING_COMBAT_DESC:0 "If attacking an enemy with higher §YArmor§! than this division has §YPiercing§!, §C33%§! of incoming damage is §Gdeflected§!."
+ PIERCING_COMBAT_DESC:1 "Damage is based on % of enemy armor pierced:"
+ PIERCING_THRESHOLD_TO_DAMAGE:0 "§Y>§!$THRESHOLD|%H0$ pierced = $DAMAGE|%H0$ damage"
+ PIERCING_THRESHOLD_TO_DAMAGE_LOWEST:0 "§R<§!$THRESHOLD|%R0$ pierced = $DAMAGE|%R0$ damage"
+ NAVY_PIERCING_TOOLTIP_INFO:0 "§YPiercing§!\nShip-mounted cannons have a higher chance to critically hit an enemy ship depending on the gun's piercing value vs the armor of the target:\n\n"
+ NAVAL_PIERCING_THRESHOLD_TO_DAMAGE:0 "§Y>§!$THRESHOLD|%H0$ pierced = $DAMAGE|%H0$ critical chance"
+ NAVAL_PIERCING_THRESHOLD_TO_DAMAGE_LOWEST:0 "§R<§!$THRESHOLD|%R0$ pierced = $DAMAGE|%R0$ critical chance"
  BM_LEADER_BONUS:0 "Commander Skill"
  BM_EXPERIENCE:0 "Experience"
  TACTICS_COMMAND_COST_CAN_AFFORD:0 "$COST|H$£command_power"
@@ -145,8 +150,8 @@
  LAND_COMBAT_TOOLTIP_ATTACKER:0 "Attacker: $COUNT|Y$ divisions ($COUNTRIES$)"
  LAND_COMBAT_TOOLTIP_DEFENDER:0 "Defender: $COUNT|Y$ divisions ($COUNTRIES$)"
  LAND_COMBAT_TOOLTIP_NO_INTEL:0 "You have no intel on this combat."
- NAVAL_COMBAT_AIRWING_TOOLTIP_KILLS_HEADER:0 "\nEnemy airplanes shot down:\n"
- NAVAL_COMBAT_AIRWING_TOOLTIP_KILLS:1 "    $NUM|G$ x $TYPE|Y$ \n"
+ NAVAL_COMBAT_AIRWING_TOOLTIP_KILLS_HEADER:1 " Enemy airplanes shot down:"
+ NAVAL_COMBAT_AIRWING_TOOLTIP_KILLS:2 "\n   $NUM|G$ x $TYPE|Y$"
  NAVAL_COMBAT_TOOLTIP_ATTACKER:1 "Attacker: $COUNT|Y$ task forces ($COUNTRIES$)"
  NAVAL_COMBAT_TOOLTIP_DEFENDER:1 "Defender: $COUNT|Y$ task forces ($COUNTRIES$)"
  NAVAL_COMBAT_TOOLTIP_ATTACKER_WITH_CONVOYS:1 "Attacker: $COUNT|Y$ task forces and $CONVOY_COUNT|Y$ convoys ($COUNTRIES$)"
@@ -227,7 +232,10 @@
  COMBAT_EXILES_DESC:0 "§HExiled Veterans§! combat bonuses against $AMOUNT|H$ of $TOTAL|H$ enemy divisions."
  COMBAT_EXILES_DESC_DELAYED:0 "Fighting against enemies who occupy their core territory. Attack: $ATK_VS_OCCUPIER|%+$ Defense: $DEF_VS_OCCUPIER|%+$"
  COMBAT_ARMOR_DESC:0 "$PIERCING|H$ of $TOTAL|H$ Enemy Divisions can pierce this Division's armor."
+ PIERCING_THRESHOLD_ENTRY:0 "$NUM|H$ Enemy Divisions deal $PIERCE_VALUE|%H$ of damage through this Division's armor."
+ NON_PIERCING_THRESHOLD_ENTRY:0 "$NUM|H$ Enemy Divisions cannot pierce this Division's armor, and deal $PIERCE_VALUE|%H$ of damage."
  COMBAT_PIERCING_DESC:0 "This Division can pierce $PIERCING|H$ of $TOTAL|H$ armored Enemy Divisions."
+ PIERCING_ENEMIES_THRESHOLD_ENTRY:0 "This Division can deal $PIERCE_VALUE|%H$ of their damage through the armor of $NUM|H$ Enemy Divisions."
  ATTACKING:0 "Attacking"
  DEFENDING:0 "Defending"
  COMBAT_OTHER_COMMANDER_DESC:0 "Commanded by: $NAME|H$\nSkill: $SKILL|Y$"
@@ -236,8 +244,8 @@
  COMBAT_TRAIT_LIST_HEADER:0 "\n\nTraits: "
  COMBAT_DETAIL_TRAIT_NAME:0 "$NAME|H$"
  COMBAT_DETAIL_TRAIT_SEPARATOR:0 ", "
- CARRIER_EFFICIENCY:0 "§YAir Efficiency:§! $VAL|Y%$"
- CARRIER_EFFICIENCY_BAD:0 "§HAir Efficiency:§! $VAL|R%$"
+ CARRIER_EFFICIENCY:1 "Air Efficiency: $VAL|Y%$"
+ CARRIER_EFFICIENCY_BAD:1 "Air Efficiency: $VAL|R%$"
  CARRIER_EFFICIENCY_DESC:0 "\nThe lower the Efficiency the fewer planes will be able to take off and perform missions."
  CARRIER_EFFICIENCY_CROWD:0 "Overcrowded: $VAL$"
  CARRIER_EFFICIENCY_ORG:0 "Organization: $VAL$"
@@ -368,9 +376,8 @@
  SCREENING_TOOLTIP_SCREEN_BOX:1 "Screening efficiency past §YScreening Group§!: $NUM|%.0H$"
  SCREENING_TOOLTIP_CAPITAL_BOX:1 "Screening efficiency past §YBattle Line§!: $NUM|%.0H$"
  SCREENING_TOOLTIP_CAPITAL_BOX_COMBINED:1 "Combined screening efficiency past §YBattle Line§!: $NUM|%.0H$"
- SCREENING_TOOLTIP_FOR_SCREEN_BOX:1 "Your $NUM|.0H$ §YScreening Ships§! can effectively screen for up to $NUM_2|.0H$ ships and are currently screening $NUM_3|.0H$ ships."
- SCREENING_TOOLTIP_FOR_CAPITAL_BOX:1 "Your $NUM|.0H$ §YCapital Ships§! can effectively screen for up to $NUM_2|.0H$ Carriers and are currently screening $NUM_3|.0H$ ships."
- SCREENING_TOOLTIP_BASE:0 "Base: $NUM|H.1$"
+ SCREENING_TOOLTIP_FOR_SCREEN_BOX:2 "Your $NUM_CAPI|.0H$ §YCapital Ships§!, $NUM_CARR|.0H$ §YCarriers§! and $NUM_CONV|.0H$ §YConvoys§! need $NUM_NEED|.0H$ §YScreening Ships§! to be fully screened, and you currently have $NUM_SCRE|.0H$ §YScreening Ships§!."
+ SCREENING_TOOLTIP_FOR_CAPITAL_BOX:2 "Your $NUM_CARR|.0H$ §YCarriers§! and $NUM_CONV|.0H$ §YConvoys§! need $NUM_NEED|.0H$ §YCapital Ships§! to be fully screened, and you currently have $NUM_CAPI|.0H$ §YCapital Ships§!."
  SCREENING_TOOLTIP_LOW_INFO:1 "Gaps in the §YScreening Group§! lead to low screening efficiency, allowing enemy submarines to target the next battle line."
  SCREENING_TOOLTIP_BONUSES:1 "Your screening efficiency will give the following bonuses to your §YBattle Line§!:\n"
  SCREENING_TOOLTIP_BONUSES_CAPITAL:1 "Your screening efficiency will give the following bonuses to your §YCarrier Group§!:\n"
