--- a/bicemodded/localisation/english/decisions_l_english.yml
+++ b/bicemodded/localisation/english/decisions_l_english.yml
@@ -5,25 +5,8 @@
  POPUP_EVENTS:0 "Event Popup"
  NEWS_POPUP_CHECKBOX_TOOLTIP:0 "§GClick§! to toggle News notifications."
  EVENT_POPUP_CHECKBOX_TOOLTIP:0 "§GClick§! to toggle Event notifications."
- 
- AC_construction_opinion:0 "Construction projects"
- AC_assist_repair_target_idea:0 "Repair Assistance"
- AC_assist_repair_target_idea_desc:0 "This country receives repair assistance from one of its allies."
- AC_assigned_factories_button_tt:0 "Select how many of your civilian factories you want to assign to this construction project.\n\n§YFactories available for projects:§! §G[?Root.num_of_civilian_factories_available_for_projects]§!\n\n§LShift-click to add or remove 5.§!"
- AC_political_power_cost_tt:0 "\n\n§YPolitical power required:§! §R[?Root.AC_political_power_cost]§!"
- AC_assist_repair_button_text:0 "Assist Repair"
- AC_assist_repair_button_tt:0 "Assist this country in building repairs.\n\n§YPolitical power daily gain:§! §R-0.25§!\n\nCivilian factories used:16\n\n§YDuration:§!§! §G180 days\n\n§LYou can only assist one country at a time with repairs.\n\nYou can cancel repair assistance by clicking this button or through the decisions tab at any time. There is a one day cooldown before you can re-enable it.§!"
- 
- AC_assist_repair_decision:0 "Repair Assistance"
- AC_assist_repair_decision_desc:0 "We are currently assisting an ally with repairs.\n\n§LRight-click to see the target country.§!"
- AC_assist_repair_CANCEL_decision:0 "Cancel Repair Assistance"
- AC_assist_repair_CANCEL_decision_desc:0 "Cancel repair assistance."
- AC_DECISIONS:0 "Construction Projects"
- AC_DECISIONS_desc:0 "Our construction projects in allied countries."
- AC_target_country_DECISIONS:0 "Construction Projects"
- AC_target_country_DECISIONS_desc:0 "Allied construction projects in our country."
- AC_construction_target_decision:0 "[From.GetName]: Constructing [From.AC_GetConstructionType]."
- AC_construction_target_decision_desc:0 "Selecting this mission will cancel the construction project.\n\nRight click to see the target state."
+ MINOR_EVENT_POPUP_CHECKBOX_TOOLTIP:0 "§GClick§! to toggle minor event notifications, such as Ace Pilot events."
+ POPUP_MINOR_EVENTS:0 "Minor Popup"
  
  defend_another_country_TT:0 "The country is not in a state to defend another country now. This could be caused by having too few divisions to garrison its states, having war near its homearea or just an overall low division count.\n\n"
  dont_defend_FROM_TT:0 "will not defend §Y[From.GetAdjective]§! borders."
@@ -87,3 +70,11 @@
  seize_some_trains_woo:0 "Commandeer Civilian Trains"
  seize_some_trains_woo_desc:0 "The merchant rail companies hold sway over our infrastructure. With war looming, we are well within our rights to commandeer equipment for state use."
  random_general_monarchy_tt:0 "A random [FROM.GetAdjective] general will gain secret monarchist sympathies."
+ removed_when_cancelled_war_prop:0 "Propaganda campaigns have been ended."
+ war_propaganda_casualties:0 "Exhort Heroism"
+ war_propaganda_casualties_desc:0 "Although the death toll rises, our people must be taught that only in battle are heroes forged."
+ war_propaganda_convoys:0 "Encourage Frugality"
+ war_propaganda_convoys_desc:0 "Even civilians can help win the war - by care and attention to our material usage, every gram of steel can be made twice as valuable to the war effort."
+ war_propaganda_bombing:0 "Bolster Spirits"
+ war_propaganda_bombing_desc:0 "Though bombs fall all around us, our brave workers soldier on. It is by this spirit that we will be victorious."
+ war_support_during_war:0 "War Support"
