--- a/bicemodded/localisation/english/deployment_l_english.yml
+++ b/bicemodded/localisation/english/deployment_l_english.yml
@@ -27,6 +27,7 @@
  DEPLOYMENT_EQUIPMENT_CHANGE:0 "$NAME$: $VALUE$"
  DEPLOYMENT_ADD_TEMPLATE:0 "Train"
  DEPLOYMENT_LINES_HIT_THE_CAP:0 "We can train at most $CAP|*H$ men.\nCapped by max manpower in the field ( $RATIO|H0%$ of $INFIELD|*H$. Minimum: $MINPOSSIBLE|*H$ men)"
+ DEPLOYMENT_LINES_HIT_THE_DIVISION_CAP:0 "§RReached the cap for this template§! \n"
  REGIMENTS_SELECTION_CANCEL:0 "Back"
  ONLY_ONE_TEMPLATE_LEFT:0 "You cannot delete your last template."
  DELETE_TEMPLATE:0 "§RDelete§! template from the list."
@@ -38,6 +39,7 @@
  DEPLOYMENT_NOT_ALLOWED_REASON_MANPOWER:0 "Cannot §RDeploy§! a unit that doesn't have any men."
  DEPLOYMENT_NOT_ALLOWED_REASON_TRAINING:0 "Cannot §RDeploy§! a unit that that isn't at least $VALUE|1H%$ trained (Current $CURRENT|1R%$)"
  DEPLOYMENT_NOT_ALLOWED_REASON_SPECIAL_FORCES:0 "Cannot §RDeploy§! a unit that would put us over the special forces limit"
+ DEPLOYMENT_NOT_ALLOWED_REASON_EXCEED_DIVISION_CAP:0 "Cannot §RDeploy§! a unit that would put us over the division's template cap"
  DEPLOYMENT_HOW_TO_DESC:0 "Select deployment(s) from the list, and then §Gclick§! on the highlighted provinces on the map to deploy.\n§gUnits deployed with incomplete equipment will fetch them through the reinforcement requests.\nConsider that units deployed too early will not get the proper training.§!"
  OPERATIONS_DESC:1 "§YOperations§!\n§TSet priority for equipment going to preparation and execution of operations§!"
  OPERATIONS_EMPTY:0 "§GNo current requests for operations.§!"
@@ -130,14 +132,20 @@
  DEPLOYMENT_LINE_EDIT_NAME:0 "§GClick§! and type, to use a custom name."
  DEPLOYMENT_LINE_OUT_OF_NAMES:0 "§gOut of historical names.§!"
  MISSING_SPECIAL_FORCES_CAP:0 "§RNot enough special forces cap§!"
+ EXCEEDING_DIVISION_CAP:0 "§RExceeding cap for division's template§!"
  TRAINING_HALTED:0 "Training has been halted\n"
  CANNOT_DELETE_SPECIAL_TEMPLATES:0 "Cannot remove special templates."
  DEPLOYMENT_CANNOT_TRAIN_SPECIAL_UNITS:1 "Cannot train new special template division."
  DEPLOYMENT_EXILE_WITH_NO_CAPITAL:0 "As a §HGovernment in Exile§! we have to control a §HCapital§! to train new divisions."
  CANT_CHANGE_DUE_TO_SPECIAL_FORCES_CAP:0 "Cannot change to this template because that would case us to exceed our special forces cap"
+ CANT_CHANGE_DUE_TO_DIVISION_CAP:0 "Cannot change to this template because that would case us to exceed our division cap"
  NO_SPECIAL_FORCES:0 "This template does not contain any special forces"
- SPECIAL_FORCES_IN_TEMPLATE:0 "This template contains $NUM|Y$ special forces battalions"
+ SPECIAL_FORCES_IN_TEMPLATE:1 "This template contains $NUM|Y$ special forces battalions."
  SPECIAL_FORCES_CAP_DESC:0 "You are currently fielding $USED|Y$ and training $IN_TRAINING|Y$ of our $CAP|Y$ allowed special forces battalions"
+ SPECIAL_FORCES_CAP_LIMIT_DESC:0 "This division is using the special forces cap, because that is the lowest cap."
+ DIVISION_CAP_OF_TEMPLATE:0 "This template has a cap of $NUM|Y$."
+ DIVISION_CAP_USAGE_DESC:0 "You are currently fielding $USED|Y$ and training $IN_TRAINING|Y$ of our $CAP|Y$ allowed divisions for $NAME|Y$"
+ DIVISION_CAP_LIMIT_DESC:0 "This division is using the template cap, because that is the lowest cap."
  DEPLOYMENT_MAX_DEPLOYABLE_DIVISION_FOR_TEMPLATE:0 "This leaves room for $TRAINABLE|Y$ division(s) using this template."
  SHOW_DECOMMISSIONED_TEMPLATES:0 "Show §Hdecommissioned templates§!"
  DECOMMISSION_TEMPLATE_TOGGLE_ON:0 "Decommission"
