--- a/bicemodded/localisation/english/frontend_l_english.yml
+++ b/bicemodded/localisation/english/frontend_l_english.yml
@@ -170,6 +170,7 @@
  ACHIEVEMENTS_LOGGED_IN_MICROSOFT:0 "Logged in with Microsoft account"
  ACHIEVEMENTS_DIFFICULTY:0 "Regular or higher difficulty"
  ACHIEVEMENTS_OK:0 "§HCan get Achievements!§!"
+ ACHIEVEMENTS_MOD_OK:0 "§HCan get Achievements from mods!§!"
  ACHIEVEMENTS_NOT_OK:1 "§RCannot get Achievements.§!"
  ACHIEVEMENTS_MOSTLY_NOT_OK:0 "§RCannot get most Achievements.§!"
  diff_strong_ai_generic:0 "Stronger AI"
@@ -209,4 +210,13 @@
  CHAT_ERROR_MUTEUNMUTE_SELF:0 "You cannot mute or unmute yourself!"
  CHAT_ERROR_CHAT_TIMEOUT_MESSAGE_SINGULAR:0 "You have been posting too frequently. Please wait for §Y1§! second before posting again."
  CHAT_ERROR_CHAT_TIMEOUT_MESSAGE_PLURAL:0 "You have been posting too frequently. Please wait for $TIME|Y$ seconds before posting again."
+ MODS_ALLOW_ACHIEVEMENTS:0 "At least one mod has achievements"
+ FE_RANDOMIZE_COUNTRY:0 "Select Random Country"
+ PICK_RANDOM_COUNTRY_TITLE:0 "Select Random Country"
+ RANDOMIZE_COUNTRY_BACK:0 "Close"
+ RANDOMIZE_COUNTRY_PICK:0 "Select Random"
+ FE_INTERESTING_MAJORS:0 "Interesting Major Countries"
+ FE_INTERESTING_MINORS:0 "Interesting Minor Countries"
+ FE_OTHER_COUNTRIES:0 "Other Countries"
+ FE_RANDOM_COUNTRY_ERROR_NO_COUNTRIES:0 "No valid countries"
  
