--- a/bicemodded/localisation/english/modifiers_l_english.yml
+++ b/bicemodded/localisation/english/modifiers_l_english.yml
@@ -577,7 +577,7 @@
  MODIFIER_AI_FOCUS_MILITARY_ADVANCEMENTS_FACTOR_DESC:0 "How much the country focuses on researching advanced military technologies."
  MODIFIER_AI_FOCUS_MILITARY_EQUIPMENT_FACTOR:0 "AI Modifier: Focus on Military Equipment"
  MODIFIER_AI_FOCUS_MILITARY_EQUIPMENT_FACTOR_DESC:0 "How much the country focuses on researching basic military equipment."
- MODIFIER_AI_DESIRED_DIVISIONS_FACTOR:0 "Factor on how many divisions the country aims to produce."
+ MODIFIER_AI_DESIRED_DIVISIONS_FACTOR:1 "AI Modifier: Desired Divisions Factor"
  MODIFIER_AI_FOCUS_PEACEFUL_FACTOR:0 "AI Modifier: Focus on Peace"
  MODIFIER_AI_FOCUS_PEACEFUL_FACTOR_DESC:0 "How much the country on peaceful research and policies."
  MODIFIER_AI_FOCUS_NAVAL_FACTOR:0 "AI Modifier: Focus on Navy"
@@ -632,7 +632,6 @@
  MODIFIER_NAVAL_INVASION_PENALTY_DESC:0 "Increases the naval invasion penalties, reducing the combat efficiency."
  MODIFIER_OCCUPATION_COST:0 "Occupation Cost"
  MODIFIER_OCCUPATION_COST_DESC:0 "Increases the cost of keeping another nation under occupation."
- MODIFIER_ENEMY_PORT_SUPERIORITY_LIMIT:0 "Port strike enemy superiority limit:"
  MODIFIER_MINIMUM_TRAINING_LEVEL:0 "Minimum training level"
  MODIFIER_MINIMUM_TRAINING_LEVEL_DESC:0 "Reduces the minimum training needed for unit to be deployed"
  MODIFIER_AUTONOMY_MANPOWER_SHARE:0 "Subject manpower requirement"
@@ -700,7 +699,7 @@
  MODIFIER_GLOBAL_NON_CORE_MANPOWER:0 "Non-core Manpower"
  MODIFIER_MOBILIZATION_SPEED:0 "Mobilization speed"
  MODIFIER_IMPROVE_RELATIONS_MAINTAIN_COST_FACTOR:0 "Improve relations maintain cost"
- MODIFIER_LICENSE_PURCHASE_COST:0 "License puchase cost"
+ MODIFIER_LICENSE_PURCHASE_COST:1 "License purchase cost"
  MODIFIER_LICENSE_AIR_PURCHASE_COST:0 "Air license purchase cost"
  MODIFIER_LICENSE_INFANTRY_PURCHASE_COST:0 "Infantry license purchase cost"
  MODIFIER_LICENSE_ARMOR_PURCHASE_COST:0 "Armor license purchase cost"
@@ -767,7 +766,7 @@
  MODIFIER_COMMAND_ABILITIES_COST_FACTOR:0 "Commander Abilities Cost"
  MODIFIER_ATTACK_BONUS_AGAINST_A_COUNTRY:0 " Attack bonus against country"
  MODIFIER_ATTACK_BONUS_AGAINST_A_COUNTRY_ON_ITS_CORES:0 "Attack on their core territory"
- MODIFIER_DEFENSE_BONUS_AGAINST_A_COUNTRY:1 "Defense bonus against country"
+ MODIFIER_DEFENSE_BONUS_AGAINST_A_COUNTRY:2 " Defense bonus against country"
  MODIFIER_CIVILIAN_FACTORY_USE:0 "Civilian Factory Use"
  MODIFIER_ARMY_LEADER_MAX_ARMY_SIZE:1 "General Max Army Size"
  MODIFIER_ARMY_GROUP_LEADER_MAX_ARMY_SIZE:0 "Field Marshal Max Army Size"
@@ -775,8 +774,8 @@
  MODIFIER_ARMY_GROUP_LEADER_MAX_ARMY_GROUP_SIZE:0 "Field Marshal Max Army Group Size"
  MODIFIER_TERRAIN_PENALTY_REDUCTION:0 "Terrain Penalty Reduction"
  MODIFIER_EQUIPMENT_CAPTURE_FACTOR:0 "Equipment Capture Ratio Modifier"
- MODIFIER_PARATROOPER_EXTRA_SUPPLY_GRACE:0 "Paratrooper Supply Grace"
- MODIFIER_MARINE_EXTRA_SUPPLY_GRACE:0 "Marine Supply Grace"
+ MODIFIER_PARATROOPER_EXTRA_SUPPLY_GRACE:0 "Extra Paratrooper Supply Grace"
+ MODIFIER_MARINE_EXTRA_SUPPLY_GRACE:0 "Extra Marine Supply Grace"
  MODIFIER_CAS_DAMAGE_REDUCTION:0 "Damage Reduction Against CAS"
  MODIFIER_AIR_SUPERIORITY_BONUS_IN_COMBAT:0 "Air Superiority Bonus in Combat"
  MODIFIER_SHORE_BOMBARDMENT:0 "Shore Bombardment Bonus"
@@ -891,6 +890,11 @@
  MODIFIER_EXILED_MAPOWER_GAIN_FACTOR:0 "Daily Exile Manpower"
  MODIFIER_RESISTANCE_TICK_IN_STATES_CONTROLLED_BY_ENEMY:1 "Resistance Growth in Owned States"
  MODIFIER_NAVAL_ENEMY_FLEET_SIZE_RATIO_PENALTY_FACTOR:0 "Enemy fleet size penalty"
+ MODIFIER_NAVAL_TORPEDO_DAMAGE_REDUCTION_FACTOR:0 "Enemy Torpedo damage reduction"
+ MODIFIER_NAVAL_TORPEDO_ENEMY_CRITICAL_CHANCE_FACTOR:0 "Enemy Torpedo critical chance"
+ MODIFIER_NAVAL_LIGHT_GUN_HIT_CHANCE_FACTOR:0 "Light Gun hit chance"
+ MODIFIER_NAVAL_HEAVY_GUN_HIT_CHANCE_FACTOR:0 "Heavy Gun hit chance"
+ MODIFIER_CARRIER_SORTIE_HOURS_DELAY:0 "Carrier Air Wing sortie delay (hours)"
  MODIFIER_NAVAL_ENEMY_FLEET_SIZE_RATIO_PENALTY_FACTOR_DESC:0 "Increase the penalty the enemy gets when it has many more ships than us in combat."
  MODIFIER_NAVAL_HAS_POTF_IN_COMBAT_ATTACK:0 "Attack when in combat alongside the §YPride of the Fleet§!"
  MODIFIER_NAVAL_HAS_POTF_IN_COMBAT_ATTACK_DESC:0 "Attack bonus for all ships fighting alongside the pride of the fleet."
@@ -901,12 +905,8 @@
  modifier_production_cost_max_ship_hull_carrier:0 "Carrier Max Cost"
  MODIFIER_INDUSTRIAL_REFIT_SPEED_FACTOR:1 "Ship Refitting Speed"
  MODIFIER_INDUSTRIAL_REFIT_SPEED_FACTOR_DESC:1 "The speed at which the refitting of a ship is performed"
- MODIFIER_INDUSTRIAL_NAVAL_EQUIPMENT_REFIT_SPEED_FACTOR:1 "$MODIFIER_INDUSTRIAL_REFIT_SPEED_FACTOR$"
- MODIFIER_INDUSTRIAL_NAVAL_EQUIPMENT_REFIT_SPEED_FACTOR_DESC:1 "$MODIFIER_INDUSTRIAL_REFIT_SPEED_FACTOR_DESC$"
  MODIFIER_INDUSTRIAL_REFIT_IC_COST_FACTOR:1 "Ship Refitting Cost"
  MODIFIER_INDUSTRIAL_REFIT_IC_COST_FACTOR_DESC:1 "The IC cost when refitting a ship"
- MODIFIER_INDUSTRIAL_NAVAL_EQUIPMENT_REFIT_IC_COST_FACTOR:1 "$MODIFIER_INDUSTRIAL_REFIT_IC_COST_FACTOR$"
- MODIFIER_INDUSTRIAL_NAVAL_EQUIPMENT_REFIT_IC_COST_FACTOR_DESC:1 "$MODIFIER_INDUSTRIAL_REFIT_IC_COST_FACTOR_DESC$"
  MODIFIER_EQUIPMENT_UPGRADE_XP_COST:0 "Equipment Experience Cost"
  MODIFIER_EQUIPMENT_UPGRADE_XP_COST_DESC:0 "Experience cost factor when changing an equipment"
  MODIFIER_NAVAL_EQUIPMENT_UPGRADE_XP_COST:0 "Naval Equipment Experience Cost"
@@ -936,8 +936,8 @@
  modifier_experience_gain_heavy_ship_combat_factor:1 "Superheavy Battleship Combat Experience Gain"
  modifier_experience_gain_light_cruiser_training_factor:1 "Light Cruiser Training Experience Gain"
  modifier_experience_gain_light_cruiser_combat_factor:1 "Light Cruiser Combat Experience Gain"
- modifier_experience_gain_submarine_training_factor:1 "Medium or long range Submarine Training Experience Gain"
- modifier_experience_gain_submarine_combat_factor:1 "Medium or long range Submarine Combat Experience Gain"
+ modifier_experience_gain_submarine_training_factor:1 "Submarine Training Experience Gain"
+ modifier_experience_gain_submarine_combat_factor:1 "Submarine Combat Experience Gain"
  modifier_experience_gain_submarine_light_training_factor:1 "Coastal Submarine Training Experience Gain"
  modifier_experience_gain_submarine_light_combat_factor:1 "Coastal Submarine Combat Experience Gain"
  MODIFIER_ARMOR:0 "Armor"
@@ -1015,11 +1015,12 @@
  factory_sabotage_decrease_tooltip_REMOVED:0 "  Civilian Factory Sabotage Chance: §H+0%§! (§R+25%§!)\n  Military Factory Sabotage Chance: §H+0%§! (§R+25%§!)"
  resource_sabotage_decrease_tooltip_UNCHANGED:0 "  Resource Sabotage Chance: §G-25%§! (§H+0%§!)\n  Resource Sabotage Duration: §G-25%§! (§H+0%§!)"
  factory_sabotage_decrease_tooltip_UNCHANGED:0 "  Civilian Factory Sabotage Chance: §G-25%§! (§H+0%§!)\n  Military Factory Sabotage Chance: §G-25%§! (§H+0%§!)"
- 
+
  modifier_repair_speed_infrastructure_factor:0 "Civilian Factory Repair Speed"
  modifier_repair_speed_industrial_complex_factor:0 "Civilian Factory Repair Speed"
  modifier_repair_speed_arms_factory_factor:0 "Military Factory Repair Speed"
  modifier_repair_speed_anti_air_building_factor:0 "Anti-Air Repair Speed"
+ modifier_repair_speed_rail_way_factor:0 "Railway Repair Speed"
  MODIFIER_CIVILIAN_INTEL_FACTOR:1 "Civilian Intelligence"
  MODIFIER_ARMY_INTEL_FACTOR:1 "Army Intelligence"
  MODIFIER_NAVY_INTEL_FACTOR:1 "Navy Intelligence"
@@ -1065,6 +1066,8 @@
  MODIFIER_ENEMY_OPERATIVE_INTEL_EXTRACTION_RATE:0 "Enemy operative intel extraction rate"
  MODIFIER_STATE_RESOURCES_FACTOR:0 "Local Available Resources"
  MODIFIER_STATE_PRODUCTION_SPEED_BUILDINGS_FACTOR:0 "Local Construction Speed"
+ modifier_state_production_speed_infrastructure_factor:0 "§Y$infrastructure$§! construction speed"
+ modifier_state_production_speed_infrastructure_factor_desc:0 "Modifies the speed of $infrastructure$ construction in this state."
  modifier_state_production_speed_bunker_factor:1 "§Y$bunker$§! construction speed"
  modifier_state_production_speed_bunker_factor_desc:1 "Modifies the speed of $bunker$ construction in this state."
  modifier_state_production_speed_coastal_bunker_factor:1 "§Y$coastal_bunker$§! construction speed"
@@ -1226,8 +1229,8 @@
  modifier_unit_armored_car_design_cost_factor:0 "Armored Car Unit Design Cost"
  modifier_unit_artillery_design_cost_factor:0 "Support Artillery Unit Design Cost"
  modifier_unit_rocket_artillery_design_cost_factor:0 "Support Rocket Artillery Unit Design Cost"
- modifier_unit_artillery_brigade_design_cost_factor:0 "Light Artillery Unit Design Cost"
- modifier_unit_mot_artillery_brigade_design_cost_factor:0 "Motorized Light Artillery Unit Design Cost"
+ modifier_unit_artillery_brigade_design_cost_factor:0 "Artillery Unit Design Cost"
+ modifier_unit_mot_artillery_brigade_design_cost_factor:0 "Motorized Artillery Unit Design Cost"
  modifier_unit_mountain_artillery_brigade_design_cost_factor:0 "Pack Artillery Unit Design Cost
  modifier_unit_rocket_artillery_brigade_design_cost_factor:0 "Rocket Artillery Unit Design Cost"
  modifier_unit_mot_rocket_artillery_brigade_design_cost_factor:0 "Truck-drawn Rocket Artillery Unit Design Cost"
@@ -1640,3 +1643,23 @@
  MODIFIER_COORDINATION_BONUS:0 "Coordination"
  coordination_bonus_desc:0 "Coordination increases the amount of damage dealt to the primary target in combat. Other damage is spread over all other targets."
  MODIFIER_COORDINATION_BONUS_DESC:0 "Coordination increases the amount of damage dealt to the primary target in combat. Other damage is spread over all other targets."
+ MODIFIER_EMBARGO_THRESHOLD_FACTOR:0 "Embargo Tension Limit"
+ MODIFIER_EMBARGO_THRESHOLD_FACTOR_DESC:0 "Modifies the world tension threshold that a target needs to have reached, in order to send an embargo."
+ MODIFIER_EMBARGO_COST_FACTOR:0 "Embargo Cost Modifier"
+ MODIFIER_EMBARGO_COST_FACTOR_DESC:0 "Modifies the cost to send an embargo."
+ embargo_threshold_factor:0 "Embargo Tension Limit"
+ embargo_cost_factor:0 "Embargo Cost Factor"
+ MODIFIER_WEEKLY_CASUALTIES_WAR_SUPPORT:0 "Weekly War Support (Combat Casualties)"
+ MODIFIER_WEEKLY_CONVOYS_WAR_SUPPORT:0 "Weekly War Support (Sunk Convoys)"
+ MODIFIER_WEEKLY_BOMBING_WAR_SUPPORT:0 "Weekly War Support (Enemy Bombing)"
+ WAR_SUPPORT_AT_WAR_CURRENTLY_TITLE:0 "\n\nEffects While At War:"
+ MODIFIER_ACE_EFFECTIVENESS_FACTOR:0 "Ace Effectiveness"
+ MODIFIER_POWER_BALANCE_DAILY:0 "Daily balance of power change"
+ MODIFIER_POWER_BALANCE_WEEKLY:0 "Weekly balance of power change"
+ MODIFIER_LOCAL_SUPPLY_IMPACT:0 "Local Supply Impact"
+ dense_rural_infrastructure:0 "Densely Populated Rural Area"
+ dense_rural_infrastructure_desc:0 "The infrastructure networks in this area are already highly saturated by a dense local population.\n\nCan be removed by reaching max §H Infrastructure§! in this state."
+ MODIFIER_LOCAL_NON_CORE_SUPPLY_IMPACT:0 "Local Non-Core Supply Impact"
+ MODIFIER_GRANT_MEDAL_COST_FACTOR:0 "Grant Medal Cost"
+ MODIFIER_FIELD_OFFICER_PROMOTION_PENALTY:0 "Field Officer Division Penalty"
+ MODIFIER_FEMALE_DIVISIONAL_COMMANDER_CHANCE:0 "Female Divisional Commander Chance"
