--- a/bicemodded/localisation/english/adjacency_rules_l_english.yml
+++ b/bicemodded/localisation/english/adjacency_rules_l_english.yml
@@ -35,3 +35,7 @@
  DARDANELLES_STRAIT_BLOCKED_FOR_COUNTRY:0 "Dardanelles Blocked for [ROOT.GetName]"
  dardanelles_strait_blocked_tt:0 "§RThe strait is closed to [ROOT.GetName] due to deteriorating relations with the strait's controller.§!"
  HORMUZ_STRAIT:0 "Strait of Hormuz"
+ suez_blocked_tt:0 "[GetSuezBlockText]"
+ blocked_as_part_of_sanctions_tt:0 "§RLeague of Nations' sanctions are in place, denying [ROOT.GetName] the use of the Suez Canal.§!"
+ SUEZ_SANCTIONS_FLAG:0 "Suez Canal Blocked"
+
