--- a/bicemodded/localisation/english/designer_l_english.yml
+++ b/bicemodded/localisation/english/designer_l_english.yml
@@ -16,7 +16,6 @@
  DESIGNER_EQUIPMENT_STATS_LABEL:0 "Equipment Cost"
  DESIGNER_COMBATWIDTH:0 "Combat width: "
  DESIGNER_COMBATWIDTH_DESC:0 "Combat Width tells you how much room this division will take up in combat that will have §Y120§! base + §Y60§! width per extra direction. For example if a combat has a total width of §Y120§! you can fit §Y6§! divisions with width of §Y20§!, §Y5§! divisions with width of §Y24§! or §Y4§! divisions with width of §Y30§!"
- #DESIGNER_COMBATWIDTH_DESC:0 "Combat Width tells you how much room this division will take up in combat that will have §Y100§! base + §Y40§! width per extra direction. For example if a combat has a total width of §Y100§! you can fit §Y5§! divisions with width of §Y20§! and §Y4§! divisions with width of §Y25§!."
  DESIGNER_MANPOWER:0 "Manpower: "
  DESIGNER_MANPOWER_DESC:0 "How much Manpower is required to fill up this division."
  DESIGNER_TRAINING_TIME:0 "Training time: "
@@ -31,6 +30,7 @@
  DESIGNER_NO_XP:0 "No experience points to spend"
  DESIGNER_EXPENSIVE:0 "Design is too expensive"
  DESIGNER_NOT_ENOUGH_SPECIAL_FORCES:0 "Design change would put us over the Special Forces limit"
+ DESIGNER_NOT_ENOUGH_DIVISION_CAP:0 "Design change would put us over the Division limit"
  DESIGNER_NO_CHANGES:0 "§TNo changes to save§!"
  DESIGNER_ARMY_SAVE:1 "Save £army_experience $VALUE|Y0$"
  DESIGNER_NAVY_SAVE:1 "Save £navy_experience $VALUE|Y0$"
@@ -142,6 +142,7 @@
  EQUIPMENT_DESIGNER_RESET_DESC:1 "Reset all unsaved changes."
  SHIP_DESIGNER_TITLE:0 "Ship Designer"
  TANK_DESIGNER_TITLE:0 "Tank Designer"
+ PLANE_DESIGNER_TITLE:0 "Plane Designer"
  EQUIPMENT_DESIGNER_IS_CAPITAL_SHIP_TOOLTIP:0 "Ships using this design will be §HCapital Ships§!."
  EQUIPMENT_DESIGNER_IS_CAPITAL_SHIP_EFFECTS_TOOLTIP:0 "§HCapital Ships§! exhibit different behavior in combat and are influenced by a different set of modifiers than other ship categories."
  EQUIPMENT_DESIGNER_IS_SCREEN_SHIP_TOOLTIP:0 "Ships using this design will be §HScreen Ships§!."
@@ -187,6 +188,9 @@
  EQUIPMENT_DESIGNER_ROLE_CHANGE_DISALLOWED:0 "§RRole change disallowed§!"
  EQUIPMENT_DESIGNER_ROLE_CHANGE_DISALLOWED_LICENSED:0 "This is a licensed design and may only be used in its stated role. New licenses must be acquired for any additional roles."
  EQUIPMENT_DESIGNER_BELOW_MINIMUM_SPEED:0 "§RMax Speed is below the $SPEED$ minimum§!"
+ EQUIPMENT_DESIGNER_WEIGHT_EXCEEDS_THRUST:0 "§RWeight exceeds Thrust§!"
+ EQUIPMENT_DESIGNER_WEIGHT_EXCEEDS_THRUST_FOR_MISSIONS:0 "§RWeight exceeds Thrust for these missions:§!"
+ EQUIPMENT_DESIGNER_PLANE_ROLE_REQUIRE_WEAPON:0 "Add main armament to give role"
 
  tank_designer_light_tank_chassis:0 "Light Tank"
  tank_designer_light_tank_chassis_role_disallowed:0 "Remove the module that forbids the $tank_designer_light_tank_chassis|H$ role to be able to switch to it."
@@ -212,6 +216,18 @@
  tank_designer_rocket_role_disallowed:0 "Add a module that allows the §HRocket Artillery§! role to be able to switch to it."
  tank_designer_flame:1 "Flame (Support Company)"
  tank_designer_flame_role_disallowed:0 "Add a module that allows the §HFlame§! role to be able to switch to it."
+
+ plane_designer_fighter:0 "Fighter"
+ plane_designer_interceptor:0 "Interceptor"
+ plane_designer_tactical_bomber:0 "Tactical Bomber"
+ plane_designer_strategic_bomber:0 "Strategic Bomber"
+ plane_designer_cas:0 "CAS"
+ plane_designer_naval_bomber:0 "Naval Bomber"
+ plane_designer_suicide:1 "Suicide Striker"
+ plane_designer_scout_plane:0 "Scout"
+ plane_designer_maritime_patrol_plane:1 "Naval Patrol Bomber"
+ plane_designer_heavy_fighter:0 "Heavy Fighter"
+
  # name list themes
 l_english:
  # name list themes -- updated to include country-specific and other new list names
@@ -242,7 +258,7 @@ l_english:
  NAME_THEME_IMPERIAL_BC:0 "Imperial Battlecruisers"
  NAME_THEME_IMPERIAL_BB:0 "Imperial Battleships"
  NAME_THEME_IMPERIAL_CARRIERS:0 "Imperial Carriers"
- 
+
  NAME_THEME_HISTORICAL_DE:0 "Historical Destroyer Escorts"
  NAME_THEME_HISTORICAL_TB:0 "Historical Torpedo Boats"
  NAME_THEME_HISTORICAL_CVL:0 "Historical Light/Escort Carriers"
@@ -302,6 +318,9 @@ l_english:
  EQUIPMENT_MODULE_MISSING_DIRECT_REQUIREMENT_HEADER:1 "§R$CATEGORY|H$ require:§!"
  EQUIPMENT_MODULE_MISSING_DIRECT_REQUIREMENT_ENTRY:1 "- $MODULE|H$ in a $SLOT|H$ slot"
  EQUIPMENT_MODULE_CATEGORY_NOT_ALLOWED:1 "§RModules of category $CATEGORY|H$ are not allowed for the slot $SLOT|H$§!"
+ EQUIPMENT_MODULE_CATEGORY_NOT_ALLOWED_BY_MODULE:0 "§R$MODULE|H$ disallow modules of category $CATEGORY|H$§!\n\n"
+ EQUIPMENT_MODULE_CATEGORY_BLOCKED_BY:0 "§RModules of category $CATEGORY|H$ are blocked by $BLOCKING|H$§!"
+ EQUIPMENT_MODULE_CATEGORY_WOULD_BLOCK:0 "§RWould block current module: $BLOCK|H$§!"
  DESIGNER_COMPOSITION_VALUE:0 "$TYPE$: $VALUE|%1Y$\n"
  DESIGNER_COMPOSITION_HEADER:0 "§YComposition§!\n"
  DESIGNER_COMPOSITION_SPECIAL_HEADER:0 "\nIt also gets bonuses based on this:\n"
@@ -322,3 +341,16 @@ l_english:
  DESIGNER_SELECT_NICHE_DELAYED:0 "Here you can classify your designs to organize them and allow for more specific reinforcement of your divisions."
  DESIGNER_SELECT_NICHE_DISABLED:0 "Division contains no armored forces"
  DESIGNER_SELECT_NICHE_DISABLED_DELAYED:0 "Add an armored battalion or support company to enable §YEquipment Tag§! selection."
+ DESIGNER_SELECT_NICHE_AIR_DELAYED:0 "Here you can classify your designs to organize them and allow for more specific reinforcement of your air wings."
+ MODULE_ALLOW_MISSION:0 "Allows the $MISSION|H$ mission"
+ MODULE_MISSION_RESTRICTED_STATS_HEADER:0 "When on $MISSIONS$:"
+ MODULE_MISSION_RESTRICTED_STATS_DISABLED_DESC:0 "This armament will not be used on $MISSIONS$ as another installed armaments category inflict greater damage on naval targets."
+ EQUIPMENT_COMPARISON:0 "Equipment Comparison"
+ OUR_EQUIPMENT:0 "Owned"
+ FOREIGN_EQUIPMENT:0 "Foreign"
+ OBSOLETE_EQUIPMENT:0 "Outdated"
+ FILTER_FLAG_VARIANT_TOOLTIP:0 "Click to toggle filtering for $COUNTRY|H$ designs"
+ EQUIPMENT_DESIGNER_FOREIGN_FILTER:0 "Click to toggle filtering for designs in our stockpile."
+ EQUIPMENT_DESIGNER_OWN_FILTER:0 "Click to toggle filtering for designs in enemy stockpiles.\n\nYou will require high intel to view these."
+ EQUIPMENT_DESIGNER_OBSOLETE_FILTER:0 "Click to toggle filtering for outdated designs."
+ 
