--- a/bicemodded/localisation/english/diplomacy_l_english.yml
+++ b/bicemodded/localisation/english/diplomacy_l_english.yml
@@ -34,10 +34,11 @@
  DIPLOMACY_WAR_NO_WAR_TROOPS_IN_TERRITORY:0 "We have Divisions in their territory."
  DIPLOMACY_ADD_WARGOAL_TITLE:0 "Add war goal"
  DIPLOMACY_ADD_WARGOAL_ACTION_DESC:0 "Add war goal"
- DIPLOMACY_PEACE_PROPOSAL_TITLE:0 "Offer peace"
- DIPLOMACY_PEACE_PROPOSAL_ACTION_DESC:0 "Offer peace to this country"
- DIPLOMACY_PEACE_PROPOSAL_DESC:0 "Conditional surrender"
- DIPLOMACY_PEACE_PROPOSAL_REQUEST_DESC:1 "$COUNTRY|UH$ offers to capitulate."
+ DIPLOMACY_PEACE_PROPOSAL_TITLE:1 "Conditional Surrender"
+ DIPLOMACY_PEACE_PROPOSAL_ACTION_DESC:1 "Conditionally surrender to this country.\nThey will receive $AMOUNT|%H$ of maximum available conference points."
+ DIPLOMACY_PEACE_PROPOSAL_DESC:1 "Conditional surrender\n$AMOUNT$"
+ DIPLOMACY_PEACE_PROPOSAL_MUST_BE_LOSING:0 "We have no Surrender Progress."
+ DIPLOMACY_PEACE_PROPOSAL_REQUEST_DESC:2 "$COUNTRY|UH$ offers to capitulate.\nWe will receive $AMOUNT|%H$ of maximum available conference points."
  DIPLOMACY_MESSAGE_ACTION_TITLE:0 "Transmission from $COUNTRY$"
  DIPLOMACY_MESSAGE_TIMED_WARGOAL_FINISH_DESC:0 "Justification of conquering $STATE|H$ for $OWNER|H$ is finished"
  DIPLOMACY_MESSAGE_TIMED_WARGOAL_FINISH_TITLE:0 "War goal justification complete"
@@ -415,6 +416,7 @@
  lend_lease:0 "Lend/lease"
  non_aggression_pact:0 "Non-aggression pact"
  guarantee_active:0 "is guaranteeing the independence of"
+ embargo_active:0 "is embargoing"
  at_war_active:0 "is at war"
  COUNTRY_AT_WAR:1 "$COUNTRY|UH$ is at war"
  COUNTRY_ALREADY_AT_OUR_WARS:1 "$COUNTRY|UH$ participates in all our available wars already"
@@ -540,6 +542,7 @@
  DR_TOO_DANGEROUS:1 "§Y$THEM|U$§! has dangerous borders against the enemies."
  RULER_OF:0 "Leader of @$TAG$$COUNTRY|Y$"
  DR_BORDERS_ENEMY:1 "$US|U$ has a border with $ENEMY$: "
+ DR_BORDERS_AT_LEAST_ONE_ENEMY:0 "$US|UH$ has a border with $NR_ENEMY$ of the enemies: "
  DR_HAS_CORE_ON_ANY_STATE:1 "$COUNTRY|UY$ has at least one of the targeted states as a Core: "
  DR_HAS_CLAIM_ON_ANY_STATE:1 "$COUNTRY|UY$ has a claim on at least one of the targeted states: "
  DR_TRUST_THE_PLAYER:1 "$COUNTRY|UY$ trusts the judgement of fellow faction member: "
@@ -563,7 +566,7 @@
  OUR_FEAR:0 "Our fear of them: $FEAR|H$"
  THEIR_FEAR:0 "Their fear of us: $FEAR|H$"
  troops_on_our_borders:0 "Troops on our borders:"
- puppet_opinion:0 "Puppet"
+ puppet_opinion:0 "Puppet:"
  puppet_active:0 "is master of"
  fleets_on_our_borders:0 "Fleets on our borders:"
  long_term_trade_partner:0 "Trade partners"
@@ -685,26 +688,26 @@
  SEND_EXP_MUST_BE_IN_SAME_FACTION:0 "We must be at same faction to send expeditionary forces."
  DIPLOMACY_REQUEST_EXP_FORCE_TITLE:0 "Request Forces"
  DIPLOMACY_REQUEST_EXP_FORCE_ACTION_DESC:0 "Request control over a number of divisions from a puppet. Since you have such strong influence over their government, they will always accept."
- 
+
  REQUEST_EXP_NOT_AI:0 "You can only request expeditionaries from AI controlled countries."
  REQUEST_EXP_MUST_BE_IN_SAME_FACTION:0 "They are not in the same faction as you."
  REQUEST_EXP_NOT_SHARING_WAR:0 "Sending expeditionary forces is considered an act of war and can't be done by a country that isn't in the war."
  REQUEST_EXP_WE_ARE_NOT_AT_WAR:0 "You must be at war to receive expeditionary forces."
  REQUEST_EXP_NOT_A_MASTER:0 "As a puppet, they can only send expeditionary forces to their master."
  REQUEST_EXP_NOT_LEADER:0 "You are not the faction leader."
- 
+
  REQUEST_EXP_TOO_MANY_EXP_FORCES:1 "This request exceeds their expeditionary force limit"
  REQUEST_EXP_COUDLNT_FIND_UNITS_SUITABLE:1 "They don't think they have enough units suitable for this order"
  REQUEST_EXP_COUDLNT_NO_ORDERS_TO_EVALUATE:0 "There are no orders in this request to evaluate"
  REQUEST_EXP_KILLING_MY_EXPEDITIONARIES:1 "They took a lot of casualties under our orders"
  REQUEST_EXP_WE_NEED_OUR_FORCES:1 "They claim to need their armies elsewhere"
- 
+
  REQUEST_EXPEDITIONARY_FORCES_DESC:0 "Request control over $COUNT|H$ divisions from $TARGET|H$."
  REQUEST_SLIDER:0 "$VAL$"
  DIPLOMACY_WARGOAL_ADDED:1 "$COUNTRY|UH$ has added a new war goal: "
  NO_VALID_EXPEDITIONS:0 "No valid units to send.\nUnits must be in provinces controlled by the target to be allowed."
  NO_VALID_VOLUNTEERS:0 "No valid units to send."
- REQUEST_AIR_VOLUNTEERS:0 "Request permission for up to $COUNT|H$ of our planes to join the war as volunteers."
+ REQUEST_AIR_VOLUNTEERS:1 "Request permission for up to $COUNT|H$ of our air wings to join the war as volunteers."
  REQUEST_AIR_VOLUNTEERS_SENT:0 "§RAir volunteer permission already received!§!"
  holds_our_cores:0 "They hold our core provinces"
  holds_our_claims:0 "They hold our claimed provinces"
@@ -873,8 +876,8 @@
  our_liberators:0 "Our liberators"
  DIPLOMACY_PEACE_PROPOSAL_DURATION_TO_SHORT:0 "War has only been raging for $DURATION|Y$ of the $LIMIT|Y$ months needed for surrendering"
  DIPLOMACY_PEACE_PROPOSAL_NOT_WARSCORE_ENOUGH:1 "War score in favor for the other side must be at least $LIMIT|%0Y$, currently $WARSCORE|%0Y$"
- DIPLOMACY_PEACE_PROPOSAL_YOU_NOT_WAR_LEADER:0 "You are not war leader for the losing side."
- DIPLOMACY_PEACE_PROPOSAL_THEY_NOT_WAR_LEADER:0 "You need to surrender to winning side leader, $LEADER|H$"
+ DIPLOMACY_PEACE_PROPOSAL_YOU_NOT_WAR_LEADER:1 "You are not war leader for the losing side."
+ DIPLOMACY_PEACE_PROPOSAL_THEY_NOT_WAR_LEADER:1 "You can only surrender to the strongest opponent, $LEADER|H$"
  DIPLOMACY_DISMANTLE_FACTION_LEADER_NOT_ALONE:0 "Faction leader may only leave a faction containing only itself with puppets"
  DIPLOMACY_DISMANTLE_FACTION_TITLE:0 "Dismantle faction"
  DIPLOMACY_DISMANTLE_FACTION_ACTION_DESC:0 "Our faction will cease to exist."
@@ -944,9 +947,9 @@
  faction_general_extended_desc:1 "$COUNTRY2|UY$ and $COUNTRY1|Y$ are in the same $FACTION|Y$ faction."
  FACTION_MEMBER_IS_FACTION_LEADER:0 "$COUNTRY|UY$ is the faction leader."
  RELATION_FACTION_MEMBERS_NEAR_ASSUMING_LEADERSHIP_HEADER:0 "The following members are currently capable or nearly capable of assuming leadership of this faction:"
- RELATION_FACTION_MEMBER_NEAR_ASSUMING_LEADERSHIP:1 "$COUNTRY|UY$ is almost capable of assuming leadership of this faction. ($PROGRESS|0%Y$)"
+ RELATION_FACTION_MEMBER_THAT_CAN_ASSUME_LEADERSHIP:0 "   $COUNTRY|UY$"
  RELATION_FACTION_MEMBER_CAN_ASSUME_LEADERSHIP:0 "$COUNTRY|UY$ is currently capable of assuming leadership of this faction."
- RELATION_FACTION_MEMBER_NEAR_ASSUMING_LEADERSHIP:0 "$COUNTRY|UY$ is almost capable of assuming leadership leadership of this faction. ($PROGRESS|0%Y$)"
+ RELATION_FACTION_MEMBER_NEAR_ASSUMING_LEADERSHIP:1 "$COUNTRY|UY$ is almost capable of assuming leadership of this faction. ($PROGRESS|0%Y$)"
  RELATION_FACTION_MEMBER_NEAR_ASSUMING_LEADERSHIP_REASON_HEADER:0 "§HThey cannot yet assume leadership for the following reasons:§!"
  war_initiator_desc:1 "$COUNTRY|UY$ is fighting an offensive war"
  war_receiver_desc:1 "$COUNTRY|UY$ is fighting a defensive war"
@@ -958,6 +961,18 @@
  timed_wargoal_initiator_extended_desc:1 "$COUNTRY1|UY$ is justifying war goals against $COUNTRY2|Y$:"
  timed_wargoal_receiver_desc:1 "$COUNTRY|UY$ is the target of foreign war goal justification"
  timed_wargoal_receiver_extended_desc:1 "$COUNTRY1|UY$ is justifying war goals against $COUNTRY2|Y$:"
+ demilitarized_zone_initiator_desc:0 "$COUNTRY|UY$ has demilitatized zone"
+ demilitarized_zone_initiator_extended_desc:0 "$COUNTRY1|UY$ has Demilitarized Zone enforced by $COUNTRY2|Y$:"
+ demilitarized_zone_receiver_desc:0 "$COUNTRY|UY$ is enforcing Demilitarized Zone"
+ demilitarized_zone_receiver_extended_desc:0 "$COUNTRY2|UY$ is enforcing Demilitarized Zone in $COUNTRY1|Y$:"
+ war_reparation_initiator_desc:0 "$COUNTRY|UY$ transfers civilian factories as war reparation"
+ war_reparation_initiator_extended_desc:0 "$COUNTRY1|UY$ transfers civilian factories to $COUNTRY2|Y$ as war reparation:"
+ war_reparation_receiver_desc:0 "$COUNTRY|UY$ receives civilian factories as war reparation"
+ war_reparation_receiver_extended_desc:0 "$COUNTRY2|UY$ receives civilian factories to $COUNTRY1|Y$ as war reparation:"
+ resource_rights_initiator_desc:0 "$COUNTRY|UY$ transfers resource rights"
+ resource_rights_initiator_extended_desc:0 "$COUNTRY1|UY$ transfers resource rights" to $COUNTRY2|Y$:"
+ resource_rights_receiver_desc:0 "$COUNTRY|UY$ receives resource rights"
+ resource_rights_receiver_extended_desc:0 "$COUNTRY2|UY$ receives resource rights to $COUNTRY1|Y$:"
  volunteers_initiator_desc:1 "$COUNTRY|UY$ has volunteers sent to other nations"
  volunteers_initiator_extended_desc:1 "$COUNTRY2|UY$ has volunteers from $COUNTRY1|Y$."
  volunteers_receiver_desc:1 "$COUNTRY|UY$ has volunteers from other nations"
@@ -1091,7 +1106,7 @@
  DR_SAME_FACTION_AS:0 "In a faction with $COUNTRY|H$: "
  DR_US_HELPED_THEM_WITH_COUP:1 "§Y$US|U$§! helped §Y$THEM$§! with the coup: "
  huge_increase:0 "Huge Increase in opinion"
- embargo:0 "Embargo"
+ embargo:1 "Industrial Sector Embargo"
  backed_our_cause:0 "Backed our cause"
  betrayed_our_cause:0 "Betrayed our cause"
  HUN_stubborn_fools:0 "Stubborn Fools"
@@ -1344,3 +1359,123 @@
  SOV_fourth_international_bad:0 "Follower of the Stalinist Doctrine"
  SOV_fourth_international_threat:0 "Renewed attempts at World Revolution"
  ITA_Guernica_threat:0 "Bombing of Guernica"
+ HAS_EMBARGO:0 "We already embargo them"
+ DIPLOMACY_PUPPET_NO:0 "We are a puppet"
+ DIPLOMACY_OUR_PUPPET_NO:0 "They are our subject"
+ THEY_OUR_FACTION:0 "They are also in $FACTION|H$"
+ HAS_NOT_EMBARGO:0 "We are not embargoing them"
+ EMBARGO_COST2:0 "Embargoing $NAME|Y$ will cost $COST|Y$£pol_power£.\n"
+ DIPLOMACY_EMBARGO_TITLE:0 "Issue Trade Embargo"
+ DIPLOMACY_EMBARGO_ACTION_DESC:1 "Prevent a country from importing any resources from us. This will also cancel any existing exports, and reduce relations between our countries."
+ DIPLOMACY_EMBARGO_DESC:1 "Prevent a country from importing any resources from us. This will also cancel any existing exports we make to them, and reduce relations between our countries.\n"
+ DIPLOMACY_REVOKE_EMBARGO_TITLE:0 "Revoke Embargo"
+ DIPLOMACY_REVOKE_EMBARGO_ACTION_DESC:0 "Revoke an embargo, and allow our exports to reach a nation."
+ DIPLOMACY_REVOKE_EMBARGO_DESC:0 "Revoke an embargo, and allow our exports to reach a nation."
+ TRADE_EMBARGOED:0 "@$TAG$$COUNTRY|H$ §Ris embargoing us!§!"
+ EMBARGO_MESSAGE_ACTION_TITLE:0 "Embargo!"
+ EMBARGO_MESSAGE_ACTION_DESC:0 "We have been embargoed by $COUNTRY|H$.\n\nAll imports we receive from them have been cancelled, and we will be unable to import further until the embargo is lifted."
+ DIPLOMACY_EMBARGO_SENT:0 "$COUNTRY$ Embargoed"
+ DIPLOMACY_EMBARGO_SENT_DESC:0 "We have shut down all exports to $COUNTRY|H$, and ensured that no new routes may be created."
+ embargoed_us:0 "Embargo"
+ DIPLOMACY_EMBARGO_THREAT_THRESHOLD_DESC:0 "They have not generated $THREAT|H0$ World Tension."
+ embargo_receiver_desc:0 "$COUNTRY|H$ is embargoed by other countries"
+ embargo_receiver_extended_desc:0 "$COUNTRY2|Y$ is embargoed by $COUNTRY1|Y$"
+ embargo_initiator_desc:0 "$COUNTRY|H$ is embargoing other countries"
+ embargo_initiator_extended_desc:0 "$COU`NTRY1|Y$ is embargoing $COUNTRY2|Y$"
+ refused_sanctions_modifier:0 "Refused to embargo us"
+ supporting_ethiopia_modifier_ITA:0 "Has supported [ETH.GetName]"
+ supporting_ethiopia_modifier_ETH:0 "Has supported [ETH.GetName]"
+ ETH_supported_independence:0 "[ETH.GetName] supported independence struggle"
+ ITA_supports_albanian_irredentism:0 "Supports [ALB.GetAdjective] irredentism"
+ ITA_ceded_destroyers:0 "Ceded Italian Destroyers to us"
+ ITA_granted_us_independence:0 "Granted us Independence"
+ ITA_refused_to_grant_us_independence:0 "Refused to Grant us Independence"
+ ITA_complied_to_church_demands:0 "Complied to Church demands"
+ ITA_supported_the_new_government:0 "Supported to the new government"
+ DR_DISTANCE_BETWEEN_CAPITALS:0 "Distance (Reduced by Tension): "
+ DW_VERY_LIKELY_JOIN_FACTION:0 " - $COUNTRY|H$ may join $FACTION|H$."
+ POSSIBLE_FACTION_INVITES:0 "If we declare war:"
+ ETH_false_flag_border_incident:0 "Italo-German Border Incident"
+ ETH_refused_mediation:0 "Refused Mediation"
+ ETH_closer_cooperation:0 "Closer Cooperation"
+ ETH_uncooperative_subject:0 "Uncooperative Subject"
+ HOA_african_cooperation:0 "African Cooperation"
+ Hosting_ETH:0 "Hosting Ethiopian Government-in-Exile"
+
+
+ ##### SWI Absolute Neutrality System ##########
+
+ SWI_mild_breach_of_neutrality:0 "Mild breach of neutrality"
+ SWI_considerable_breach_of_neutrality:0 "Considerable breach of neutrality"
+ SWI_grave_breach_of_neutrality:1 "Grave Breach of Neutrality"
+ SWI_mild_appeasement:1 "Mild Appeasement"
+ SWI_considerable_appeasement:1 "Considerable Appeasement"
+ SWI_extensive_appeasement:0 "Extensive Appeasement"
+ SWI_fortified_border:1 "Fortified their border with us"
+ SWI_banned_countrys_ideology:1 "The Swiss Confederation banned propaganda from our government's ideology"
+ SWI_romansh_language_adopted:0 "Adopted Romansh as an official language"
+ SWI_banned_national_front:0 "Banned The Swiss National Front"
+ SWI_bought_equipment_from_the_enemy:0 "Bought equipment from the enemy"
+ SWI_bought_equipment_from_us:0 "Bought equipment from us"
+ SWI_banned_communism_good:0 "Banned Communism"
+ SWI_left_league_of_nations_bad:0 "Left the League of Nations"
+ SWI_left_league_of_nations_good:1 "$SWI_left_league_of_nations_bad$"
+ SWI_limited_press_censorship:0 "Limited Press Censorship"
+ SWI_extensive_press_censorship:0 "Extensive Press Censorship"
+ SWI_froze_our_assets:0 "Froze our Assets"
+ SWI_trade_agreement:1 "Active Trade Agreement"
+ SWI_broke_trade_agreement:1 "Broke Trade Agreement"
+ SWI_fascism_friendly_confederation_president:0 "Fascism Friendly Confederation President"
+ SWI_diplomatic_visit:0 "Diplomatic Visit"
+ SWI_suspicions_of_coverup:0 "Suspects coverup in Gustloff Affair"
+ SWI_recruited_assasin_as_agent:0 "Recruited known killer as Operative"
+ SWI_swift_retribution_for_gustloff:0 "Delivered swift retribution for Gustloff's Assasination"
+ SWI_slow_retribution_for_gustoff:0 "Punished Gustloff's killer"
+ SWI_sentenced_frankfurter_without_a_trial:0 "Sentenced David Frankfurter without a trial"
+ SWI_light_sentence_for_frankfurter:0 "Light sentence for Frankfurter"
+ SWI_too_harsh_on_frankfurter:0 "Harshly sentenced David Frankfurter"
+ SWI_fair_trial_for_frankfurter:0 "Fair trial for David Frankfurter"
+ SWI_pardoned_frankfurter_good:0 "Pardoned an antifascist"
+ SWI_pardoned_frankfurter_bad:0 "Pardoned a killer"
+ SWI_rejected_our_request:0 "They rejected our request"
+ SWI_they_lied_to_us:0 "They lied to us!"
+ SWI_accepted_petition_of_the_200_good:0 "Censored negative press against us"
+ SWI_accepted_petition_of_the_200_bad:0 "Censored press negative against a fascist country"
+ SWI_unfavourable_alignment:0 "Aligned against us"
+ SWI_rejected_fascists:0 "Rejected fascist sympathizers"
+ SWI_excessive_response_to_petition:1 "Excessive Response to Petition"
+ SWI_arrested_sympathizers:0 "Arrested sympathizers of our regime"
+ SWI_is_planning_against_us:0 "Is planning against us"
+ SWI_investments_in_country:0 "Investments in Switzerland"
+ SWI_military_collaboration:0 "Military collaboration with Switzerland"
+ SWI_abandoned_neutrality:0 "Abandoned Neutrality"
+ SWI_close_ties:0 "Close Ties"
+ SWI_close_ties_with_fascists:0 "Close ties with Fascists"
+ SWI_suspicious_preparations:0 "Suspicious Preparations"
+ SWI_supporting_intelligence:0 "Supporting Intelligence Efforts"
+ SWI_investing_in_switzerland:0 "Investing in Switzerland"
+ SWI_gold_trade:0 "Using Switzerland to trade gold"
+ SWI_gold_seized_opinion_bad:0 "Seized our gold reserves!"
+ SWI_backchannel_negotiations_opinion_modifier:0 "Back-channel Negotiations"
+ SWI_too_costly_to_invade:0 "Invading Switzerland would be too costly"
+ SWI_obstructing_anschluss:0 "Obstructing Anschluss"
+ SWI_supporting_resistance:0 "Supporting Resistance Groups in Our Territory"
+ SWI_country_positive_opinion_TT:0 "Has Positive Opinion of [ROOT.GetNameDef]"
+ SWI_country_is_angry_TT:0 "Has bad opinion of [ROOT.GetNameDef]"
+ SWI_country_is_happy_TT:0 "Has good opinion of [ROOT.GetNameDef]"
+
+ #DANNES
+ ITA_military_cooperation_acceptance:0 "Military Cooperation"
+ ITA_military_cooperation_rejection:0 "Rejected Military Cooperation"
+ ITA_recognized_the_empire:0 "Recognized the Italian Empire"
+ ITA_dismissed_the_empire:0 "Dismissed the Italian Empire"
+
+
+ DIPLOMACY_CONDITIONAL_SURRENDER_POINT_FRACTION:0 "They will receive $VALUE|%H$ of the maximum available conference points."
+ DR_COMPARED_DEPLOYED_MANPOWER:0 "Deployed Manpower compared to us: "
+ DR_CONDITIONAL_SURRENDER_WORLD_THREAT_SCALED:0 "Current Global Tension: "
+ DR_CONDITIONAL_SURRENDER_WAR_SUPPORT:0 "War Support: "
+ DR_CONDITIONAL_SURRENDER_EMBARGO:0 "Embargos Incurred: "
+ DR_CONDITIONAL_SURRENDER_OWN_SURRENDER_LEVEL:0 "Own Surrender Progress: "
+ DR_CONDITIONAL_SURRENDER_MINOR_WAR:0 "Minor Nation Conflict: "
+ embargo_relation_tt:0 "An embargo will harm relations between two countries."
